# pheasant_w

./: .gitignore  Cargo.toml  README.md
benches/: lexer.rs
crates/pheasant_core/: Cargo.toml
crates/pheasant_core/fuzz/fuzz_targets/: fuzz_target_1.rs
crates/pheasant_core/src/: failure.rs  headers.rs  lib.rs  requests.rs  server.rs  service.rs  socket.rs
crates/pheasant_core/templates/: 404.html
crates/pheasant_headers/: Cargo.toml
crates/pheasant_headers/src/: headers.rs  lib.rs
crates/pheasant_headers/src/headers/: authentication.rs  caching.rs  cookies.rs  cors.rs  message_body_information.rs  other.rs  request_context.rs
crates/pheasant_macro_utils/: Cargo.toml
crates/pheasant_macro_utils/src/: lib.rs  parsers.rs
crates/pheasant_macro_utils/src/plumber/: failure.rs
crates/pheasant_macro_utils/src/poet/: service.rs
crates/pheasant_uri/: Cargo.toml
crates/pheasant_uri/src/interpreter/: origin.rs
macros/pheasant_macro_fail/: Cargo.toml
macros/pheasant_macro_get/: Cargo.toml  README.md
macros/pheasant_macro_get/tests/: re.rs
macros/pheasant_macro_post/: Cargo.toml
pheasant_core/: README.md
pheasant_core/examples/: tls.rs
pheasant_core/fuzz/: Cargo.toml
pheasant_core/src/: cookies.rs  cors.rs  failure.rs  lib.rs  monopoly.rs  response.rs  server.rs  tls.rs
pheasant_core/templates/: 400.html  505.html
pheasant_macro_fail/: Cargo.toml
pheasant_macro_fail/src/: main.rs
pheasant_macro_get/src/: lib.rs  main.rs
pheasant_macro_get/tests/: mime.rs
pheasant_macro_post/: Cargo.toml
pheasant_macro_post/src/: lib.rs
pheasant_macro_utils/: Cargo.toml  README.md
pheasant_macro_utils/src/: mining.rs  plumber.rs  poet.rs
pheasant_uri/: Cargo.toml
pheasant_uri/benches/: finder.rs
pheasant_uri/src/: errors.rs  lex.rs  lib.rs  main.rs  origin_set.rs  parse.rs  url.rs
pheasant_uri/src/interpreter/: origin.rs  resource.rs
pheasant_uri/tests/: basic.rs
src/: callback.rs  cors.rs  errors.rs  extractors.rs  fail.rs  failure.rs  generators.rs  headers.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  mime.rs  origin_set.rs  parse.rs  parser.rs  parsers.rs  percent_encoding.rs  plumber.rs  poet.rs  query.rs  request_origin.rs  requests.rs  resource.rs  response.rs  server.rs  service.rs  status.rs  status_codes.rs  uri.rs  url.rs
src/interpreter/: origin.rs  resource.rs  route.rs
src/plumber/: service.rs
src/poet/: failure.rs  service.rs
templates/: 400.html  404.html  505.html
tests/: basic.rs  lex.rs  syntax_semantics.rs
