[package]
name = "pheasant"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dev"
path = "src/main.rs"

[dependencies]
pheasant_core = { version = "0.1.0", path = "../pheasant_core" }
pheasant_uri = { version = "0.1.0", path = "../pheasant_uri" }
pheasant_macro_utils = { version = "0.1.0", path = "../pheasant_macro_utils" }

pheasant_macro_get = { version = "0.1.1", path = "../pheasant_macro_get" }
pheasant_macro_post = { version = "0.1.0", path = "../pheasant_macro_post" }
pheasant_macro_fail = { version = "0.1.0", path = "../pheasant_macro_fail" }
