[package]
name = "pheasant"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = ["pheasant_core", "pheasant", "pheasant_uri", "pheasant_macro_utils", "pheasant_macro_get", "pheasant_macro_post", "pheasant_macro_fail"]

[workspace.dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
syn = { version = "2.0.104", features = ["extra-traits", "full", "parsing", "printing"] }
proc-macro2 = "1.0.95"
quote = "1.0.40"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
crossbeam-channel = "0.5.15"
deflate = { version = "1.0.0", features = ["gzip"] }
mime = "0.3.17"

[[bin]]
name = "dev"
path = "src/main.rs"

[dependencies]
pheasant_core = { version = "0.1.0", path = "../pheasant_core" }
pheasant_uri = { version = "0.1.0", path = "../pheasant_uri" }
pheasant_macro_utils = { version = "0.1.0", path = "../pheasant_macro_utils" }
pheasant_macro_get = { version = "0.1.1", path = "../pheasant_macro_get" }
pheasant_macro_post = { version = "0.1.0", path = "../pheasant_macro_post" }
pheasant_macro_fail = { version = "0.1.0", path = "../pheasant_macro_fail" }
