[package]
name = "pheasant_core"
version = "0.1.0"
edition = "2024"

[[example]]
name = "tls"
path = "examples/tls.rs"

[dependencies]
chrono = { workspace = true }
crossbeam-channel = { workspace = true }
deflate = { workspace = true }
mime = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
syn = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
rcgen = { workspace = true }
hashbrown = { workspace = true }
pheasant_uri = { version = "0.1.0", path = "../pheasant_uri" }
