[package]
name = "pheasant_macro_utils"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
serde_json = { workspace = true }
pheasant_core = { version = "0.1.0", path = "../pheasant_core" }
pheasant_uri = { version = "0.1.0", path = "../pheasant_uri" }
