[package]
name = "pheasant_uri"
version = "0.1.0"
edition = "2024"

# [[test]]
# name = "basic"
# path = "tests/basic.rs"

[[test]]
name = "lex"
path = "tests/lex.rs"

[[bin]]
name = "dev"
path = "src/main.rs"

[[bench]]
name = "finder"
path = "benches/finder.rs"

[[bench]]
name = "lexer"
path = "benches/lexer.rs"

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
